# nextjs-openai-chatbot

./: .dockerignore  .gitignore  Dockerfile  README.md  biome.json  package.json  pyproject.toml
app/: page.tsx
app/api/chat/: route.ts
app/components/: MessageInputForm.tsx
app/components/icons/: AssistantIcon.tsx  PlaneIcon.tsx  UserIcon.tsx  index.tsx
app/components/messages/: MessageItem.tsx  MessageList.tsx  index.tsx
front/: docker-compose.yml
front/demo_app/: app.py
frontend/: .gitignore  .pnp.cjs  biome.json  package.json
infra/: .eslintrc  .prettierignore  .prettierrc  README.md  cdktf.json  main.ts  package.json
infra/src/lib/: backend.ts  iam.ts  index.ts  provider.ts  vpc.ts
infra/src/stacks/: index.ts  vpc-stack.ts
infra/src/types/: index.ts
infra/src/util/: config.ts
